# automl-pipeline

./: .env.example  .gitignore  MODEL_CARD.md  README.md  app.py  pyproject.toml  requirements.txt
bpmn/: model_retraining.bpmn  model_usage.bpmn
configs/: airflow_variables.json
dags/: ml_pipeline_dag.py
data/: current.csv  reference.csv
logs/: ab_test_log.csv  ab_test_report.txt
scripts/: __init__.py  analyze_results.py  automl_trainer.py  data_utils.py  drift_detection_evidently.py  drift_monitor.py  mlflow_registry.py
